add processing table

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,9 +78,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    // Butter Knife
-    // implementation 'com.jakewharton:butterknife:10.2.1'
-    // annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
-
-
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
 }
