--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 
     defaultConfig {
         applicationId "com.jvr.datovaschranka"
-        minSdk 21
+        minSdk 23 // poviseno z 21 na 23 kvuli sifrovani
         targetSdk 32
         versionCode generateVersionCode()       // An integer value that represents the version of the application code, relative to other versions.
         versionName generateVersionName()       // A string value that represents the release version of the application code, as it should be shown to users.
@@ -84,6 +84,8 @@ dependencies {
     implementation 'commons-codec:commons-codec:1.14'
     // XML https://commons.apache.org/proper/commons-configuration/dependency-info.html
     implementation'org.apache.commons:commons-configuration2:2.9.0'
+
+    implementation "androidx.security:security-crypto:1.0.0"
     //implementation 'org.apache.commons:commons-text:1.10.0'
     //implementation 'org.apache.commons:commons-lang3:3.6'//NEPOVYSOVAT na 3.12.0 !!! prestane to jet !!!!
     //implementation 'org.apache.commons:commons-text:1.10.0'
