--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     implementation'org.apache.commons:commons-configuration2:2.9.0'
 
     implementation "androidx.security:security-crypto:1.0.0"
+
+    implementation group: 'org.simpleframework', name: 'simple-xml', version: '2.7.1'
     //implementation 'org.apache.commons:commons-text:1.10.0'
     //implementation 'org.apache.commons:commons-lang3:3.6'//NEPOVYSOVAT na 3.12.0 !!! prestane to jet !!!!
     //implementation 'org.apache.commons:commons-text:1.10.0'
