--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.jvr.datovaschranka">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
@@ -29,14 +31,18 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.NotificationService" />
+        <service
+            android:enabled="true"
+            android:exported="true"
+            android:name=".services.NotificationService" />
 
         <!-- https://stackoverflow.com/questions/11168869/starting-background-service-when-android-turns-on -->
         <receiver android:name=".receivers.BootBroadcastReceiver" android:exported="true">
             <intent-filter>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
-                <action android:name="android.intent.action.SCREEN_ON" />
+                <!--<action android:name="android.intent.action.SCREEN_ON" />-->
             </intent-filter>
         </receiver>
     </application>
