--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DatovaSchranka"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.ListOfMessages"
+            android:exported="false" />
         <activity
             android:name=".activities.AddNewAccountActivity"
             android:exported="false" />
@@ -32,18 +35,19 @@
         </activity>
 
         <service
+            android:name=".services.NotificationService"
             android:enabled="true"
-            android:exported="true"
-            android:name=".services.NotificationService" />
-
-        <!-- https://stackoverflow.com/questions/11168869/starting-background-service-when-android-turns-on -->
-        <receiver android:name=".receivers.BootBroadcastReceiver" android:exported="true">
+            android:exported="true" /> <!-- https://stackoverflow.com/questions/11168869/starting-background-service-when-android-turns-on -->
+        <receiver
+            android:name=".receivers.BootBroadcastReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.USER_PRESENT" />
-                <!--<action android:name="android.intent.action.SCREEN_ON" />-->
+                <!-- <<action android:name="android.intent.action.BOOT_COMPLETED" />
+                <<action android:name="android.intent.action.USER_PRESENT" />
+                 <action android:name="android.intent.action.SCREEN_ON" /> -->
             </intent-filter>
         </receiver>
     </application>
+
 </manifest>
